--- a/index.html
+++ b/index.html
@@ -1232,12 +1232,27 @@
             </figure>
           </section>
           <section>
-            <h4>NN types history</h4>
-            TBD
-          </section>
-          <section>
             <h4>Recap</h4>
-            TBD
+            <div class="r-hstack">
+              <ul>
+                <li class="fragment">
+                  <small style="color: #fff">
+                    Training a neural network is a process of adjusting its parameters (weights and biases) 
+                    minimizing the cost function.
+                  </small>
+                </li>
+                <li class="fragment">
+                  <small style="color: #fff">
+                    A properly labeled dataset is crucial for training a neural network, but the network will know only about the training samples.
+                  </small>
+                </li>
+                <li class="fragment">
+                  <small style="color: #fff">
+                    Starting with random weights and biases, the network iteratively adjusts them based on the desired output of the training samples.
+                  </small>
+                </li>
+              </ul>
+            </div>
           </section>
           <section>
             <h4>Doubts or thoughts?</h4>
@@ -1249,11 +1264,81 @@
 
         <section>
           <section>
+            <h4>A bit of history</h4>  
+            <div class="r-hstack" style="font-size: 0.45em;">
+              <ul>
+                <li class="fragment">
+                  <span style="color: #fff">
+                    <span class="primary-text">1943</span> - Warren McCulloch and Walter Pitts conceptualized the first neural network 
+                    comparing the human brain to an electrical circuit. 
+                  </span>
+                </li>
+                <li class="fragment">
+                  <span style="color: #fff">
+                    <span class="primary-text">1958</span> - Frank Rosenblatt invented the perceptron, 
+                    a type of neural network with one layer that could learn to recognize patterns in data.
+                  </span>
+                </li>
+                <li class="fragment">
+                  <span style="color: #fff">
+                    <span class="primary-text">1980</span> - The first neural network with few multiple layers 
+                    was developed by David Rumelhart, Geoffrey Hinton, and Ronald Williams.
+                  </span>
+                </li>
+                <li class="fragment">
+                  <span style="color: #fff">
+                    <span class="primary-text">1986</span> - Backpropagation was developed by Rumelhart, Hinton, and Williams, 
+                    a technique for training neural networks with multiple layers.
+                  </span>
+                </li>
+                <li class="fragment">
+                  <span style="color: #fff">
+                    So called AI winter (1974-1980) - funding cuts, lack of progress, and skepticism about the future of AI because of the computational complexity.
+                  </span>
+                </li>
+                <li class="fragment">
+                  <span style="color: #fff">
+                    <span class="primary-text">1997</span> - The first Long Short-Term Memory (LSTM) neural network 
+                    was developed by Sepp Hochreiter and Jürgen Schmidhuber. Capable of learning long-term dependencies and well suited for sequence prediction tasks.
+                  </span>
+                </li>
+                <li class="fragment">
+                  <span style="color: #fff">
+                    <span class="primary-text">1999</span> - GPUs becomes the perfect fit to execute matrix operations required for neural networks.
+                  </span>
+                </li>
+                <li class="fragment">
+                  <span style="color: #fff">
+                    <span class="primary-text">2012</span> - AlexNet wins the ImageNet Large Scale Visual Recognition Challenge (ILSVRC) 
+                    a type of convolutional neural network (CNN) image recognition challenge.
+                  </span>
+                </li>
+                <li class="fragment">
+                  <span style="color: #fff">
+                    <span class="primary-text">2017</span> - Attention is all you need (Google paper) introduced the transformer architecture, 
+                    a type of neural network that can process sequence data in parallel. This architecture is the foundation of modern LLMs.
+                  </span>
+                </li>
+              </ul>
+            </div>
+          </section>
+          <section>
+            <h4>It's been 82 years...</h4>
+            <figure>
+              <img height="300" src="imgs/ex-machina.gif" data-preview-image />
+            </figure>
+          </section>
+        </section>
+
+        <section>
+          <section>
             <h4>Thank you!</h4>
             <figure>
               <img height="300" src="imgs/simpsons-universe.gif" data-preview-image />
             </figure>
-            thanks to 1green 3blue
+            <small>
+              <a href="https://www.youtube.com/watch?v=aircAruvnKk&list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi" target="_blank"><u>Thanks to 3Blue1Brown</u></a>
+            </small>
           </section>
         </section>
       </div>
