--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
 
     <title>Neural Networks</title>
+    <link rel="icon" href="/ks-neural-networks/favicon.avif" />
 
     <meta name="description" content="Neural Networks" />
     <meta name="author" content="Matteo Di Paolantonio" />
